<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">FlashLigher</string>
    <string name="action_settings">Settings</string>
    <string name="click">Open Menu</string>
    <string name="back">back</string>
    <string name="screen">Screen</string>
    <string name="flashlight">Flash</string>
    <string name="set_bright">Change the brightness</string>
    <string name="set_color">Change Color</string>
    <string name="about_us">About</string>
    <string name="exit">exit</string>

</resources>
