<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/backId"
        android:icon="@drawable/menu_return"
        android:title="@string/back" />
    
<!--     <item
        android:id="@+id/flashlightId"
        android:icon="@drawable/menu_flashlight"
        android:title="@string/flashlight" /> -->
    
    <item 
        android:id="@+id/colorId"
        android:icon="@drawable/menu_color"
        android:title="@string/set_color" />
    
    <item 
        android:id="@+id/brightId"
        android:icon="@drawable/menu_bright"
        android:title="@string/set_bright"/>
    
    <item 
        android:id="@+id/aboutId"
        android:icon="@drawable/menu_about"
        android:title="@string/about_us" />
    
    <item 
        android:id="@+id/exitId"
        android:icon="@drawable/menu_exit"
        android:title="@string/exit"/>

</menu>
